fixed sidebar display on Safari browser

--- a/style.css
+++ b/style.css
@@ -125,14 +125,15 @@ margin-top: 16px;
 
 .firstGroup, .secondGroup {
     display: grid;
-    grid-template-columns: 1fr 9fr;
+    grid-template-columns: 1fr 3fr;
     place-content: center;
-    gap: 8px;
+    gap: 16px;
 }
 
 .firstGroup > img, .secondGroup > img {
     position: relative;
-    bottom: 5px;
+    bottom: 10px;
+    height: 36px;
 }
 
 button {
